--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card id="mat">
-    <mat-card-title>Bem Vindo!</mat-card-title>
-    <mat-card-subtitle>Sitema para exemplificar a construção de um cadastro em Angular</mat-card-subtitle>
+<mat-card id="mat" class="home mat-elevation-z3">
+    <mat-card-title class="title">Bem Vindo!</mat-card-title>
+    <mat-card-subtitle class="subtitle">Sitema para exemplificar a construção de um cadastro em Angular</mat-card-subtitle>
 </mat-card>
