--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -1,3 +1,14 @@
 #mat{
     background-color: rgb(74, 74, 236);
 }
+
+.home .title {
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
+
+.home .subtitle{
+    font-size: 1rem;
+    
+}
