ultimo commit do dia 24.09.2021

--- a/src/app/views/product-crud/product-crud.component.html
+++ b/src/app/views/product-crud/product-crud.component.html
@@ -1,1 +1,3 @@
-<p>product-crud works!</p>
+<button mat-raised-button (click)="navigate()"  routerLinkActive="router-link-active" > 
+    Novo Produto
+</button>
