--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,15 +1,11 @@
 <mat-toolbar class="footer">
     <span>
         Desenvolvido com 
-        <i class="material-icons red v-middle" appRed>
+        <i class="material-icons red v-middle">
             favorite
         </i>
-        por <strong>Dev<span class="red" >I</span>o</strong>
+        por <strong>Al<span class="red" >I</span>sson Davis</strong>
     </span>
 
-    <ul>
-        <li *appFor="let item off [1, 2, 3]">
-            {{ item }}
-        </li>
-    </ul>
+    
 </mat-toolbar>
