Alterações do dia 26.09.2021

--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,5 @@
-<p>product-create works!</p>
+
+
+<button mat-raised-button (click) = "create()" >Salvar</button>
+<button mat-raised-button (click) = "cancelar()" >Cancelar</button>
+
