Alterações do dia 27.09.2021

--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="footer">
     <span>
-        Desenvolvido com 
+        Desenvolvido em 
         <i class="material-icons red v-middle">
-            favorite
+            home
         </i>
         por <strong>Al<span class="red" >I</span>sson Davis</strong>
     </span>
