--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -1,5 +1,17 @@
+<mat-card id="material">
+    <mat-card-header>
+        <mat-card-title>Novo Produto</mat-card-title>
+    </mat-card-header>
+    <form action="">
+        <mat-form-field>
+            <input id="nome" matInput placeholder="Nome" [(ngModel)]="produto.name" name="name">
+        </mat-form-field>
+        <mat-form-field>
+            <input id="preco" matInput placeholder="Preço" [(ngModel)]="produto.price" name="price">
+        </mat-form-field>
+    </form>
 
+    <button mat-raised-button (click)="create()">Salvar</button>
+    <button mat-raised-button  (click)="cancelar()">Cancelar</button>
 
-<button mat-raised-button (click) = "create()" >Salvar</button>
-<button mat-raised-button (click) = "cancelar()" >Cancelar</button>
-
+</mat-card>
