Alterações do dia 28.09.2021

--- a/src/app/views/product-crud/product-crud.component.html
+++ b/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,5 @@
 <button mat-raised-button (click)="navigate()"  routerLinkActive="router-link-active" > 
     Novo Produto
 </button>
+
+<app-product-read></app-product-read>
