--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,11 @@
 <mat-card id="mat" class="home mat-elevation-z3">
-    <mat-card-title class="title">Bem Vindo!</mat-card-title>
-    <mat-card-subtitle class="subtitle">Sitema para exemplificar a construção de um cadastro em Angular</mat-card-subtitle>
+    <mat-card-title class="title">Djalma's Bar&Drink</mat-card-title>
+    <mat-card-subtitle class="subtitle">Bar do Djalma</mat-card-subtitle>
+    
 </mat-card>
+<div><span>
+    <a routerLink="/">
+        <img class="logo" src="assets/Djalma's Bar&Drink Logotipo.png" alt="logo"/>
+    </a>
+</span>
+</div>
