--- a/src/app/components/product/product-read/product-read.component.css
+++ b/src/app/components/product/product-read/product-read.component.css
@@ -1,11 +1,15 @@
 .minhaTabela{
-    
+   
     text-align: center;
+    width: 100%;
 }
 
-.mat-column-id {
-    width: 10px;
-    
-    padding-right: 4px;
-    text-align: center;
-  }
+
+#dele{
+    color: rgba(238, 36, 36, 0.753);
+}
+
+#edit{
+    color: green;
+    padding-right: 20px;
+}
