--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -10,9 +10,10 @@
 }
 
 .header .logo{
-    max-height: 32px;
+    height: 40px;
 }
 
 .header .title-group{
-    padding-left: 35px;
+
+    padding-left: 10px;
 }
