Alterações do dia 02.10.2021

--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -28,12 +28,12 @@
         <mat-header-cell *matHeaderCellDef> Ações
         </mat-header-cell>
         <mat-cell *matCellDef="let element"> 
-            <a routerLink="/">
+            <a routerLink="/products/update/{{ element.id }}">
                 <i class="material-icons" id="edit">
                     edit
                 </i>
             </a> 
-            <a routerLink="/">
+            <a routerLink="/products/delete/{{ element.id }}">
                 <i class="material-icons" id="dele">
                     delete
                 </i>
