--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -2,7 +2,7 @@
     
     <span class="title-group">
         <a>
-            <i class="material-icons">
+            <i class="material-icons" routerLink="/">
                 home
             </i>
             Inicio
